<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/areas">
        <ListPreference
            android:key="@string/areas"
            android:title="@string/areas"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/poi_type">
        <CheckBoxPreference
            android:key="pt_SUMMIT"
            android:title="@string/summits"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="pt_TOWN"
            android:title="@string/towns"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="pt_BUILDING"
            android:title="@string/buildings"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="pt_LAKE"
            android:title="@string/lakes"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="pt_MONUMENT"
            android:title="@string/monuments"
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/distance">
        <ListPreference
            android:key="@string/distance"
            android:title="@string/max_distance"
            android:defaultValue="500"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>